# sk-agentcorp

./: .env.example  .gitignore  CHANGELOG.md  CHANGELOG_zh.md  CLAUDE.md  Dockerfile  LICENSE  README.md  README_zh.md  docker-compose.yml  implementation_plan.md  pyproject.toml
backend/: __init__.py  config.py  database.py  main.py  requirements.txt
backend/engine/: __init__.py  anti_stuck.py  crew_builder.py  heartbeat.py  llm_router.py  shared_memory.py  workflow.py  workflow_nodes.py  workflow_state.py
backend/llm_configs/: api_keys.json.example  default_model.json.example
backend/models/: __init__.py  agent.py  audit.py  budget.py  company.py  task.py
backend/prompts/: execute_prompt.txt  plan_prompt.txt  validate_prompt.txt
backend/roles/: __init__.py  loader.py
backend/routers/: __init__.py  agents.py  budget.py  companies.py  dashboard.py  tasks.py  websocket.py
backend/schemas/: __init__.py  agent.py  budget.py  company.py  task.py
backend/services/: __init__.py  agent_service.py  audit_service.py  budget_service.py  company_service.py  task_service.py
cli/: __init__.py  main.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
roles/creative/: content_strategist.yaml  creative_director.yaml  graphic_designer.yaml  technical_writer.yaml
roles/data/: bi_analyst.yaml  data_analyst.yaml  data_scientist.yaml  research_analyst.yaml
roles/engineering/: architect.yaml  backend_dev.yaml  data_engineer.yaml  devops_engineer.yaml  frontend_dev.yaml  lead_engineer.yaml  ml_engineer.yaml  mobile_dev.yaml  qa_engineer.yaml  security_engineer.yaml
roles/executive/: ceo.yaml  cfo.yaml  coo.yaml  cto.yaml
roles/marketing/: brand_strategist.yaml  community_manager.yaml  content_writer.yaml  copywriter.yaml  email_marketer.yaml  growth_hacker.yaml  marketing_director.yaml  seo_specialist.yaml  (+2 more)
templates/: content_factory.yaml  marketing_agency.yaml  saas_dev_agency.yaml
(+52 files in other folders)
